// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Object tests Custom Objects Importer should continueOnProblems if \`continueOnProblems\` 1`] = `
Object {
  "detailedSummary": Object {
    "createErrorCount": 2,
    "created": 1,
    "errors": Array [
      "key must at least have one character",
      "container must at least have one character",
    ],
    "unchanged": 0,
    "updateErrorCount": 0,
    "updated": 0,
  },
  "reportMessage": "Summary: there were 1 successfully imported custom objects. 1 were newly created, 0 were updated and 0 were unchanged. 2 errors occurred (2 create errors and 0 update errors.)",
}
`;

exports[`Custom Object tests Custom Objects Importer should continueOnProblems if \`continueOnProblems\` 2`] = `
Array [
  "key must at least have one character",
  "container must at least have one character",
]
`;

exports[`Custom Object tests Custom Objects Importer should import custom objects to CTP 1`] = `
Object {
  "detailedSummary": Object {
    "createErrorCount": 0,
    "created": 3,
    "errors": Array [],
    "unchanged": 0,
    "updateErrorCount": 0,
    "updated": 0,
  },
  "reportMessage": "Summary: there were 3 successfully imported custom objects. 3 were newly created, 0 were updated and 0 were unchanged.",
}
`;

exports[`Custom Object tests Custom Objects Importer should stop import on first errors by default 1`] = `
Object {
  "createErrorCount": 1,
  "created": 1,
  "errors": Array [
    "key must at least have one character",
  ],
  "unchanged": 0,
  "updateErrorCount": 0,
  "updated": 0,
}
`;

exports[`Custom Object tests Custom Objects Importer should update custom objects on the CTP 1`] = `
Object {
  "detailedSummary": Object {
    "createErrorCount": 0,
    "created": 0,
    "errors": Array [],
    "unchanged": 0,
    "updateErrorCount": 0,
    "updated": 3,
  },
  "reportMessage": "Summary: there were 3 successfully imported custom objects. 0 were newly created, 3 were updated and 0 were unchanged.",
}
`;
